# dbotter

./: .gitignore  01-spec.md  02-architecture.md  03-traces.md  04-patch-plan.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  docker-compose.yml  justfile
.github/workflows/: ci.yml  preview.yml  release.yml  verify.yml
config/: local.example.toml
docs/daily-use/: evidence.md  plan.md  research.md  spec.md  trace.md
docs/release/: spec.md  trace.md
docs/usable-mvp/: plan.md  spec.md  trace.md
packaging/macos/: Info.plist  stable-ax-identifiers.json
packaging/release/: installed-receipt.schema.json  preview-manifest.schema.json
scripts/: assemble-installed-receipt.py  assemble-live-contract-receipt.py  assemble-preview-manifest.py  build-icns.py  build-linux-artifact.sh  build-macos-app.sh  build-native-ax-driver.sh  build-native-j2-ax-driver.sh  check-installed-receipt-contract.sh  check-preview-version.py  check-release-contract.sh  check-workflow-graph.rb  dispatch-and-verify-tap.sh  exact-executable-process-set.sh  generate-redis-tls-fixture.sh  installed-receipt-contract.jq  live_contract.py  native-ax-driver.swift  native-j2-ax-driver.swift  package-version.sh  receipt-contract.jq  receipt-security.sh  run-source-bound-ax-driver.py  scan-private-workspace.py  test-four-target-preview-contract.sh  test-installed-receipt-assembler-contract.sh  test-installed-receipt-contract.sh  test-installed-verifier-contract.sh  test-live-evidence-contract.sh  test-macos-package-contract.sh  test-macos-package-live.sh  test-receipt-contract.sh  test-release-contract.sh  test-tap-dispatch-contract.sh  test-tap-handshake-contract.sh  test-workflow-contract.sh  validate-installed-receipt-config-contract.py  validate-macos-package.py  validate-preview-manifest.py  validate-receipt-timestamps.py  (+8 more)
src/: build_info.rs  cli.rs  config.rs  error.rs  execution.rs  export.rs  export_file.rs  lib.rs  main.rs  model.rs  public_error.rs  secrets.rs  service.rs  workspace.rs
src/drivers/: mod.rs  mongodb.rs  mysql.rs  mysql_catalog.rs  redis.rs  redis_browser.rs
src/ui/: accessibility.rs  adapter.rs  app.rs  editor.rs  layout.rs  mod.rs  model.rs  mysql_explorer.rs  native_harness.rs  profile_form.rs  result_view.rs  (+4 more)
tests/: cell_truth_contract.rs  cli_contract.rs  config_contract.rs  contracts.rs  controller_contract.rs  daily_use_config_migration_contract.rs  daily_use_config_v3_contract.rs  daily_use_j2_installed_contract.rs  daily_use_mysql_read_session_contract.rs  daily_use_workspace_model_contract.rs  daily_use_workspace_renderer_contract.rs  daily_use_workspace_store_contract.rs  driver_tls_boundary_contract.rs  error_debug_contract.rs  exec_receipt_contract.rs  execution_contract.rs  export_allocation_contract.rs  export_file_contract.rs  export_golden.rs  live_evidence_recorder.rs  live_mysql.rs  live_mysql_safety.rs  live_redis.rs  mysql_catalog_contract.rs  mysql_contract.rs  mysql_prepared_contract.rs  profile_contract.rs  public_error_contract.rs  recovery_dispatch_contract.rs  redis_contract.rs  resource_contract.rs  restart_contract.rs  review_blockers_contract.rs  review_followup_contract.rs  service_contract.rs  source_contract.rs  ui_accesskit.rs  ui_contrast.rs  ui_editor_contract.rs  ui_error_contract.rs  (+5 more)
(+14 files in other folders)
