[package]
name = "dbotter"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Local Rust database client"
repository = "https://github.com/2lab-ai/dbotter"

[[bin]]
name = "dbotter"
path = "src/main.rs"

[features]
default = []
desktop = ["dep:eframe", "dep:egui_extras"]
mongodb = ["dep:mongodb"]

[dependencies]
async-trait = "0.1.89"
bitflags = { version = "2.10.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "string"] }
eframe = { version = "0.35.0", optional = true }
egui_extras = { version = "0.35.0", optional = true }
futures-util = "0.3.31"
mongodb = { version = "3.8.0", optional = true }
redis = { version = "1.3.0", features = ["aio", "tokio-comp", "connection-manager"] }
rust_decimal = "1.39.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
sqlparser = { version = "0.62.0", default-features = false }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "mysql", "chrono", "json", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
