[package]
name = "dbotter"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Local Rust database client"
repository = "https://github.com/2lab-ai/dbotter"

[[bin]]
name = "dbotter"
path = "src/main.rs"

[features]
default = []
desktop = ["dep:eframe", "dep:egui_extras"]
mongodb = ["dep:mongodb"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "string"] }
eframe = { version = "0.35.0", optional = true }
egui_extras = { version = "0.35.0", optional = true }
futures-util = "0.3.31"
mongodb = { version = "3.8.0", optional = true }
redis = { version = "1.3.0", features = ["aio", "tokio-comp", "connection-manager"] }
rustix = { version = "1.1.4", features = ["fs"] }
rust_decimal = "1.39.0"
rustls-pki-types = "1.15.0"
rustls-webpki = "0.103.13"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
shell-words = "1.1.1"
sqlparser = { version = "0.62.0", default-features = false }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "mysql", "chrono", "json", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zeroize = "1.9.0"

[dev-dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
tempfile = "3.24.0"
